testdata/good/id.gol
fn(a){
 fn(b){
  fn(c){
   fn(d){
    fn(e){
     fn(f){
      f
     }(e)
    }(d)
   }(c)
  }(b)
 }(a)
}(0)
