testdata/bad/04-too-polymorphic.gol
fn (x) {
 fn(a,b) {0}(x(0), x(false))
}(fn(x){x})
